surepharma/force-app/main/default/objects/Contact/fields/Adults_In_Household__c.field-meta.xml
<CustomField>
    <fullName>Adults_In_Household__c</fullName>
    <description>Apex-generated</description>
    <label>Adults In Household</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>