surepharma/force-app/main/default/objects/Contact/fields/Adverse_Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Side_Effects__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if child had adverse side effects from patch</inlineHelpText>
    <label>Adverse Side Effects</label>
    <type>Checkbox</type>
</CustomField>