surepharma/force-app/main/default/objects/Contact/fields/Declined_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Declined_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if family has declined to make an appointment for applying patch</inlineHelpText>
    <label>Declined Appointment</label>
    <type>Checkbox</type>
</CustomField>