surepharma/force-app/main/default/objects/Contact/fields/Follow_Up_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Datetime__c</fullName>
    <inlineHelpText>Set from related &quot;Follow Up&quot; event</inlineHelpText>
    <label>Follow Up Datetime</label>
    <type>DateTime</type>
</CustomField>