surepharma/force-app/main/default/objects/Contact/fields/Follow_Up_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apex-generated: Patch_Applied_Datetime__c + 48 hours.  Used to auto-toggle Stage__c to &quot;Follow-up&quot;.</description>
    <inlineHelpText>Set by apex formula: &quot;Patch Applied Datetime&quot; plus 48 hours</inlineHelpText>
    <label>Follow Up Eligible</label>
    <type>Checkbox</type>
</CustomField>