surepharma/force-app/main/default/objects/Contact/fields/Patch_Applied_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Patch_Applied_Datetime__c</fullName>
    <description>Apex-generated from &quot;Patch Appointment&quot; event</description>
    <inlineHelpText>Set from related &quot;Patch Appointment&quot; event</inlineHelpText>
    <label>Patch Applied Datetime</label>
    <type>DateTime</type>
</CustomField>