surepharma/force-app/main/default/objects/Contact/fields/Patch_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Patch_Eligible__c</fullName>
    <formula>AND(Age__c &lt; 6, Age__c &gt; 1)</formula>
    <label>Patch Eligible</label>
    <type>Checkbox</type>
</CustomField>