surepharma/force-app/main/default/objects/Contact/fields/Pediatrician__c.field-meta.xml
<CustomField>
    <fullName>Pediatrician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Apex-generated</description>
    <label>Pediatrician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Pediatrician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>