surepharma/force-app/main/default/objects/Contact/fields/Reason_Declined__c.field-meta.xml
<CustomField>
    <fullName>Reason_Declined__c</fullName>
    <label>Reason Declined</label>
    <length>255</length>
    <type>Text</type>
</CustomField>