surepharma/force-app/main/default/objects/Contact/recordTypes/Adults.recordType-meta.xml
<RecordType>
    <fullName>Adults</fullName>
    <active>true</active>
    <description>Adult guardians of eligible children</description>
    <label>Adults</label>
</RecordType>