surepharma/force-app/main/default/objects/Contact/recordTypes/Children.recordType-meta.xml
<RecordType>
    <fullName>Children</fullName>
    <active>true</active>
    <description>Eligible children</description>
    <label>Children</label>
</RecordType>