surepharma/force-app/main/default/objects/Contact/recordTypes/Health_Professionals.recordType-meta.xml
<RecordType>
    <fullName>Health_Professionals</fullName>
    <active>true</active>
    <description>Individuals associated with pediatrician&apos;s office</description>
    <label>Health Professionals</label>
</RecordType>