surepharma/force-app/main/default/objects/Contact/validationRules/If_Declined_Appointment.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Declined_Appointment</fullName>
    <active>true</active>
    <description>Field cannot be empty if Declined_Appointment__c checked</description>
    <errorConditionFormula>Declined_Appointment__c = True &amp;&amp;  ISBLANK(Reason_Declined__c)</errorConditionFormula>
    <errorDisplayField>Reason_Declined__c</errorDisplayField>
    <errorMessage>A reason must be provided if &quot;Declined Appointment&quot; is checked</errorMessage>
</ValidationRule>