surepharma/force-app/main/default/objects/Contact/listViews/Eligible_Children.listView-meta.xml
<ListView>
    <fullName>Eligible_Children</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Sex__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Account.Primary_Contact__c</columns>
    <columns>Pediatrician__c</columns>
    <columns>Declined_Appointment__c</columns>
    <columns>Stage__c</columns>
    <columns>ACCOUNT.OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patch_Eligible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Children</value>
    </filters>
    <label>Eligible Children</label>
</ListView>