surepharma/force-app/main/default/objects/Contact/listViews/Health_Professionals.listView-meta.xml
<ListView>
    <fullName>Health_Professionals</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Health_Professionals</value>
    </filters>
    <label>Health Professionals</label>
</ListView>